# streamlit-starter

./: .dockerignore  .env.example  .pre-commit-config.yaml  Dockerfile  LICENSE  Makefile  README.md  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
.github/: cd.yml  ci.yml  dependabot.yml
infra/: .gitignore  .terraform.lock.hcl  HOWTO.md  Makefile  README.md  main.tf
infra/proxy/: Dockerfile  nginx.conf
scripts/: launch.sh
src/csv_dashboard/: main.py
src/libs/: settings.py
src/markdown_summarizer/: main.py
src/shiny_demo/: main.py
